--- a/src/components/ErrorModal/ErrorModal.module.css
+++ b/src/components/ErrorModal/ErrorModal.module.css
@@ -1,9 +1,26 @@
 .modal {
-  background: #fff;
-  outline: 0;
-  min-width: 250px;
-  max-width: 500px;
-  border-radius: 4px;
+  inset: 0px;
+  background-color: rgb(255, 255, 255);
+}
+.overlay {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modalHeader {
+  border-bottom: 1px solid #eee;
+}
+
+.modalFooter {
+  border-top: 1px solid #eee;
+  text-align: right;
 }
 
 .modalHeader,
@@ -12,15 +29,6 @@
   padding: 0.5em 1.5em;
 }
 
-.modalHeader {
-  border-bottom: 1px solid #eee;
-}
-
 .modalTitle {
   margin: 0;
-}
-
-.modalFooter {
-  border-top: 1px solid #eee;
-  text-align: right;
 }
